hphp/test/slow/reified-generics/as-retranslate-all.php.expectf

Fatal error: Uncaught exception 'TypeAssertionException' with message 'Expected %|{C<int>|C}, got C' in %s/hphp/test/slow/reified-generics/as-retranslate-all.php:8
Stack trace:
#0 {main}
